src/test/deca/syntax/valid/declVar.deca
// Description:
//    Programme minimaliste utilisant une declaration de variable avec et sans initialisation.
//
// Resultats:
//    0
//    3.2
//
// Historique:
//    cree le 09/01/2024

{
    int i;
    float a = 3.2;
    // println(i);
    // println(a);
}
