src/test/deca/syntax/invalid/println_variable.deca
// Description:
//    On utilise le mot println comme une variable
//
// Resultats:
//    Erreur du parser ligne 11
//
// Historique:
//    Cree le 09/01/2024

{
    int println = 3;
}
